// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sku-webpack-plugin build should create valid app 1`] = `
"<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width,initial-scale=1"
    >
    <script
      defer="defer"
      src="main.js"
    >
    </script>
    <link
      href="main.css"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>"
POST HYDRATE DIFFS: 
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -20,5 +20,18 @@
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html.kztvv0z,html.kztvv0z body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="_1qi8hom0 _1y7skkk18 _1y7skkk1b">
+        <div class="njgpo30 kztvv07i kztvv06e kztvv09q kztvv08m kztvv05e _1y7skkk18 _1y7skkk1b kztvv032 kztvv035">
+          <span class="njgpo30 kztvv04y _1y7skkk0 _1y7skkk1 _1y7skkk21 _8on0wp4 _1y7skkkd">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;

exports[`sku-webpack-plugin build should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": .njgpo30 {
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-tap-highlight-color: transparent;
}
[data-braid-hidefocusrings] .njgpo30 {
  outline: none;
}
.njgpo31 {
  display: block;
}
.njgpo32 {
  line-height: 1;
}
.njgpo33 {
  list-style: none;
}
.njgpo34 {
  quotes: none;
}
.njgpo34:after,
.njgpo34:before {
  content: "";
}
.njgpo35 {
  border-collapse: collapse;
  border-spacing: 0;
}
.njgpo36 {
  -webkit-appearance: none;
  appearance: none;
}
.njgpo37 {
  background-color: transparent;
}
.njgpo39 {
  color: inherit;
}
.njgpo3a:disabled {
  opacity: 1;
}
.njgpo3a::-ms-expand {
  display: none;
}
.njgpo3c[type="number"] {
  -moz-appearance: textfield;
}
.njgpo3c[type="number"]::-webkit-inner-spin-button,
.njgpo3c[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
.njgpo3c::-ms-clear {
  display: none;
}
.njgpo3c::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
.njgpo3f {
  color: inherit;
  text-decoration: none;
}
.kztvv00 {
  overflow: hidden;
}
.kztvv01 {
  overflow: scroll;
}
.kztvv02 {
  overflow: visible;
}
.kztvv03 {
  overflow: auto;
}
.kztvv04 {
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
.kztvv05 {
  outline: none;
}
.kztvv06 {
  opacity: 0;
}
.kztvv07 {
  z-index: 0;
}
.kztvv08 {
  z-index: 1;
}
.kztvv09 {
  z-index: 2;
}
.kztvv0a {
  z-index: 90;
}
.kztvv0b {
  z-index: 100;
}
.kztvv0c {
  z-index: 200;
}
.kztvv0d {
  z-index: 290;
}
.kztvv0e {
  z-index: 300;
}
.kztvv0f {
  z-index: 400;
}
.kztvv0g {
  cursor: default;
}
.kztvv0h {
  cursor: pointer;
}
.kztvv0i {
  pointer-events: none;
}
.kztvv0j {
  top: 0;
}
.kztvv0k {
  bottom: 0;
}
.kztvv0l {
  left: 0;
}
.kztvv0m {
  right: 0;
}
.kztvv0n {
  height: 100%;
}
.kztvv0o {
  height: var(--_2btcce9);
}
.kztvv0p {
  width: 100%;
}
.kztvv0q {
  width: var(--_2btcce9);
}
.kztvv0r {
  min-width: 0;
}
.kztvv0s {
  max-width: var(--_2btcce11);
}
.kztvv0t {
  max-width: var(--_2btcce12);
}
.kztvv0u {
  max-width: var(--_2btcce13);
}
.kztvv0v {
  max-width: var(--_2btcce14);
}
.kztvv0w {
  transition: var(--_2btcce5i);
}
.kztvv0x {
  transition: var(--_2btcce5j);
}
.kztvv0y:active {
  transform: var(--_2btcce5k);
}
html.kztvv0z .kztvv011,
html:not(.kztvv0z) .kztvv010 {
  background: var(--_2btcce1t);
}
html.kztvv0z .kztvv013,
html:not(.kztvv0z) .kztvv012 {
  background: var(--_2btcce1u);
}
html.kztvv0z .kztvv015,
html:not(.kztvv0z) .kztvv014 {
  background: var(--_2btcce1v);
}
html.kztvv0z .kztvv017,
html:not(.kztvv0z) .kztvv016 {
  background: var(--_2btcce1w);
}
html.kztvv0z .kztvv019,
html:not(.kztvv0z) .kztvv018 {
  background: var(--_2btcce1x);
}
html.kztvv0z .kztvv01b,
html:not(.kztvv0z) .kztvv01a {
  background: var(--_2btcce1y);
}
html.kztvv0z .kztvv01d,
html:not(.kztvv0z) .kztvv01c {
  background: var(--_2btcce1z);
}
html.kztvv0z .kztvv01f,
html:not(.kztvv0z) .kztvv01e {
  background: var(--_2btcce20);
}
html.kztvv0z .kztvv01h,
html:not(.kztvv0z) .kztvv01g {
  background: var(--_2btcce21);
}
html.kztvv0z .kztvv01j,
html:not(.kztvv0z) .kztvv01i {
  background: var(--_2btcce22);
}
html.kztvv0z .kztvv01l,
html:not(.kztvv0z) .kztvv01k {
  background: var(--_2btcce23);
}
html.kztvv0z .kztvv01n,
html:not(.kztvv0z) .kztvv01m {
  background: var(--_2btcce24);
}
html.kztvv0z .kztvv01p,
html:not(.kztvv0z) .kztvv01o {
  background: var(--_2btcce25);
}
html.kztvv0z .kztvv01r,
html:not(.kztvv0z) .kztvv01q {
  background: var(--_2btcce26);
}
html.kztvv0z .kztvv01t,
html:not(.kztvv0z) .kztvv01s {
  background: var(--_2btcce27);
}
html.kztvv0z .kztvv01v,
html:not(.kztvv0z) .kztvv01u {
  background: var(--_2btcce28);
}
html.kztvv0z .kztvv01x,
html:not(.kztvv0z) .kztvv01w {
  background: var(--_2btcce29);
}
html.kztvv0z .kztvv01z,
html:not(.kztvv0z) .kztvv01y {
  background: var(--_2btcce2a);
}
html.kztvv0z .kztvv021,
html:not(.kztvv0z) .kztvv020 {
  background: var(--_2btcce2b);
}
html.kztvv0z .kztvv023,
html:not(.kztvv0z) .kztvv022 {
  background: var(--_2btcce2c);
}
html.kztvv0z .kztvv025,
html:not(.kztvv0z) .kztvv024 {
  background: var(--_2btcce2d);
}
html.kztvv0z .kztvv027,
html:not(.kztvv0z) .kztvv026 {
  background: var(--_2btcce2e);
}
html.kztvv0z .kztvv029,
html:not(.kztvv0z) .kztvv028 {
  background: var(--_2btcce2f);
}
html.kztvv0z .kztvv02b,
html:not(.kztvv0z) .kztvv02a {
  background: var(--_2btcce2g);
}
html.kztvv0z .kztvv02d,
html:not(.kztvv0z) .kztvv02c {
  background: var(--_2btcce2h);
}
html.kztvv0z .kztvv02f,
html:not(.kztvv0z) .kztvv02e {
  background: var(--_2btcce2i);
}
html.kztvv0z .kztvv02h,
html:not(.kztvv0z) .kztvv02g {
  background: var(--_2btcce2j);
}
html.kztvv0z .kztvv02j,
html:not(.kztvv0z) .kztvv02i {
  background: var(--_2btcce2k);
}
html.kztvv0z .kztvv02l,
html:not(.kztvv0z) .kztvv02k {
  background: var(--_2btcce2l);
}
html.kztvv0z .kztvv02n,
html:not(.kztvv0z) .kztvv02m {
  background: var(--_2btcce2m);
}
html.kztvv0z .kztvv02p,
html:not(.kztvv0z) .kztvv02o {
  background: var(--_2btcce2n);
}
html.kztvv0z .kztvv02r,
html:not(.kztvv0z) .kztvv02q {
  background: var(--_2btcce2o);
}
html.kztvv0z .kztvv02t,
html:not(.kztvv0z) .kztvv02s {
  background: var(--_2btcce2p);
}
html.kztvv0z .kztvv02v,
html:not(.kztvv0z) .kztvv02u {
  background: var(--_2btcce2q);
}
html.kztvv0z .kztvv02x,
html:not(.kztvv0z) .kztvv02w {
  background: var(--_2btcce2r);
}
html.kztvv0z .kztvv02z,
html:not(.kztvv0z) .kztvv02y {
  background: var(--_2btcce2s);
}
html.kztvv0z .kztvv031,
html:not(.kztvv0z) .kztvv030 {
  background: var(--_2btcce2t);
}
html.kztvv0z .kztvv033,
html:not(.kztvv0z) .kztvv032 {
  background: var(--_2btcce2u);
}
html.kztvv0z .kztvv035,
html:not(.kztvv0z) .kztvv034 {
  background: var(--_2btcce2v);
}
html.kztvv0z .kztvv037,
html:not(.kztvv0z) .kztvv036 {
  box-shadow: var(--_2btcce5l);
}
html.kztvv0z .kztvv039,
html:not(.kztvv0z) .kztvv038 {
  box-shadow: var(--_2btcce5m);
}
html.kztvv0z .kztvv03b,
html:not(.kztvv0z) .kztvv03a {
  box-shadow: var(--_2btcce5n);
}
html.kztvv0z .kztvv03d,
html:not(.kztvv0z) .kztvv03c {
  box-shadow: inset 0 0 0 var(--_2btccey) var(--_2btccef);
}
html.kztvv0z .kztvv03f,
html:not(.kztvv0z) .kztvv03e {
  box-shadow: inset 0 0 0 var(--_2btccey) var(--_2btcceg);
}
html.kztvv0z .kztvv03h,
html:not(.kztvv0z) .kztvv03g {
  box-shadow: inset 0 0 0 var(--_2btccez) var(--_2btccef);
}
html.kztvv0z .kztvv03j,
html:not(.kztvv0z) .kztvv03i {
  box-shadow: inset 0 0 0 var(--_2btccez) var(--_2btcceg);
}
html.kztvv0z .kztvv03l,
html:not(.kztvv0z) .kztvv03k {
  box-shadow: inset 0 0 0 var(--_2btccey) var(--_2btcceh);
}
html.kztvv0z .kztvv03n,
html:not(.kztvv0z) .kztvv03m {
  box-shadow: inset 0 0 0 var(--_2btccey) var(--_2btccei);
}
html.kztvv0z .kztvv03p,
html:not(.kztvv0z) .kztvv03o {
  box-shadow: inset 0 0 0 var(--_2btccey) var(--_2btccej);
}
html.kztvv0z .kztvv03r,
html:not(.kztvv0z) .kztvv03q {
  box-shadow: inset 0 0 0 var(--_2btccez) var(--_2btccej);
}
html.kztvv0z .kztvv03t,
html:not(.kztvv0z) .kztvv03s {
  box-shadow: inset 0 0 0 var(--_2btccey) var(--_2btccek);
}
html.kztvv0z .kztvv03v,
html:not(.kztvv0z) .kztvv03u {
  box-shadow: inset 0 0 0 var(--_2btccez) var(--_2btccek);
}
html.kztvv0z .kztvv03x,
html:not(.kztvv0z) .kztvv03w {
  box-shadow: inset 0 0 0 var(--_2btccey) var(--_2btccel);
}
html.kztvv0z .kztvv03z,
html:not(.kztvv0z) .kztvv03y {
  box-shadow: inset 0 0 0 var(--_2btccey) var(--_2btccen);
}
html.kztvv0z .kztvv041,
html:not(.kztvv0z) .kztvv040 {
  box-shadow: inset 0 0 0 var(--_2btccez) var(--_2btccen);
}
html.kztvv0z .kztvv043,
html:not(.kztvv0z) .kztvv042 {
  box-shadow: inset 0 0 0 var(--_2btccey) var(--_2btcceo);
}
html.kztvv0z .kztvv045,
html:not(.kztvv0z) .kztvv044 {
  box-shadow: inset 0 0 0 var(--_2btccez) var(--_2btcceo);
}
html.kztvv0z .kztvv047,
html:not(.kztvv0z) .kztvv046 {
  box-shadow: inset 0 0 0 var(--_2btccey) var(--_2btccep);
}
html.kztvv0z .kztvv049,
html:not(.kztvv0z) .kztvv048 {
  box-shadow: inset 0 0 0 var(--_2btccey) var(--_2btcceq);
}
html.kztvv0z .kztvv04b,
html:not(.kztvv0z) .kztvv04a {
  box-shadow: inset 0 0 0 var(--_2btccey) var(--_2btccer);
}
html.kztvv0z .kztvv04d,
html:not(.kztvv0z) .kztvv04c {
  box-shadow: inset 0 0 0 var(--_2btccez) var(--_2btccer);
}
html.kztvv0z .kztvv04f,
html:not(.kztvv0z) .kztvv04e {
  box-shadow: inset 0 0 0 var(--_2btccey) var(--_2btcces);
}
html.kztvv0z .kztvv04h,
html:not(.kztvv0z) .kztvv04g {
  box-shadow: inset 0 0 0 var(--_2btccez) var(--_2btcces);
}
html.kztvv0z .kztvv04j,
html:not(.kztvv0z) .kztvv04i {
  box-shadow: inset 0 0 0 var(--_2btccey) var(--_2btccet);
}
html.kztvv0z .kztvv04l,
html:not(.kztvv0z) .kztvv04k {
  box-shadow: inset 0 0 0 var(--_2btccey) var(--_2btcceu);
}
html.kztvv0z .kztvv04n,
html:not(.kztvv0z) .kztvv04m {
  box-shadow: inset 0 0 0 var(--_2btccey) var(--_2btccev);
}
html.kztvv0z .kztvv04p,
html:not(.kztvv0z) .kztvv04o {
  box-shadow: inset 0 0 0 var(--_2btccey) var(--_2btccew);
}
html.kztvv0z .kztvv04r,
html:not(.kztvv0z) .kztvv04q {
  box-shadow: inset 0 0 0 var(--_2btccey) var(--_2btccex);
}
html.kztvv0z .kztvv04t,
html:not(.kztvv0z) .kztvv04s {
  box-shadow: 0 0 0 var(--_2btcce10) var(--_2btccem);
}
.kztvv04u {
  display: none;
}
.kztvv04y {
  display: block;
}
.kztvv052 {
  display: inline;
}
.kztvv056 {
  display: inline-block;
}
.kztvv05a {
  display: flex;
}
.kztvv05e {
  position: relative;
}
.kztvv05i {
  position: absolute;
}
.kztvv05m {
  position: fixed;
}
.kztvv05q {
  border-radius: 0;
}
.kztvv05u {
  border-radius: 9999px;
}
.kztvv05y {
  border-radius: var(--_2btcceb);
}
.kztvv062 {
  border-radius: var(--_2btccec);
}
.kztvv066 {
  border-radius: var(--_2btcced);
}
.kztvv06a {
  border-radius: var(--_2btccee);
}
.kztvv06e {
  padding-top: var(--_2btcce0);
}
.kztvv06i {
  padding-top: var(--_2btcce1);
}
.kztvv06m {
  padding-top: var(--_2btcce2);
}
.kztvv06q {
  padding-top: var(--_2btcce3);
}
.kztvv06u {
  padding-top: var(--_2btcce4);
}
.kztvv06y {
  padding-top: var(--_2btcce5);
}
.kztvv072 {
  padding-top: var(--_2btcce6);
}
.kztvv076 {
  padding-top: var(--_2btcce7);
}
.kztvv07a {
  padding-top: var(--_2btcce8);
}
.kztvv07e {
  padding-top: 0;
}
.kztvv07i {
  padding-bottom: var(--_2btcce0);
}
.kztvv07m {
  padding-bottom: var(--_2btcce1);
}
.kztvv07q {
  padding-bottom: var(--_2btcce2);
}
.kztvv07u {
  padding-bottom: var(--_2btcce3);
}
.kztvv07y {
  padding-bottom: var(--_2btcce4);
}
.kztvv082 {
  padding-bottom: var(--_2btcce5);
}
.kztvv086 {
  padding-bottom: var(--_2btcce6);
}
.kztvv08a {
  padding-bottom: var(--_2btcce7);
}
.kztvv08e {
  padding-bottom: var(--_2btcce8);
}
.kztvv08i {
  padding-bottom: 0;
}
.kztvv08m {
  padding-right: var(--_2btcce0);
}
.kztvv08q {
  padding-right: var(--_2btcce1);
}
.kztvv08u {
  padding-right: var(--_2btcce2);
}
.kztvv08y {
  padding-right: var(--_2btcce3);
}
.kztvv092 {
  padding-right: var(--_2btcce4);
}
.kztvv096 {
  padding-right: var(--_2btcce5);
}
.kztvv09a {
  padding-right: var(--_2btcce6);
}
.kztvv09e {
  padding-right: var(--_2btcce7);
}
.kztvv09i {
  padding-right: var(--_2btcce8);
}
.kztvv09m {
  padding-right: 0;
}
.kztvv09q {
  padding-left: var(--_2btcce0);
}
.kztvv09u {
  padding-left: var(--_2btcce1);
}
.kztvv09y {
  padding-left: var(--_2btcce2);
}
.kztvv0a2 {
  padding-left: var(--_2btcce3);
}
.kztvv0a6 {
  padding-left: var(--_2btcce4);
}
.kztvv0aa {
  padding-left: var(--_2btcce5);
}
.kztvv0ae {
  padding-left: var(--_2btcce6);
}
.kztvv0ai {
  padding-left: var(--_2btcce7);
}
.kztvv0am {
  padding-left: var(--_2btcce8);
}
.kztvv0aq {
  padding-left: 0;
}
.kztvv0au {
  margin-top: var(--_2btcce0);
}
.kztvv0ay {
  margin-top: var(--_2btcce1);
}
.kztvv0b2 {
  margin-top: var(--_2btcce2);
}
.kztvv0b6 {
  margin-top: var(--_2btcce3);
}
.kztvv0ba {
  margin-top: var(--_2btcce4);
}
.kztvv0be {
  margin-top: var(--_2btcce5);
}
.kztvv0bi {
  margin-top: var(--_2btcce6);
}
.kztvv0bm {
  margin-top: var(--_2btcce7);
}
.kztvv0bq {
  margin-top: var(--_2btcce8);
}
.kztvv0bu {
  margin-top: 0;
}
.kztvv0by {
  margin-bottom: var(--_2btcce0);
}
.kztvv0c2 {
  margin-bottom: var(--_2btcce1);
}
.kztvv0c6 {
  margin-bottom: var(--_2btcce2);
}
.kztvv0ca {
  margin-bottom: var(--_2btcce3);
}
.kztvv0ce {
  margin-bottom: var(--_2btcce4);
}
.kztvv0ci {
  margin-bottom: var(--_2btcce5);
}
.kztvv0cm {
  margin-bottom: var(--_2btcce6);
}
.kztvv0cq {
  margin-bottom: var(--_2btcce7);
}
.kztvv0cu {
  margin-bottom: var(--_2btcce8);
}
.kztvv0cy {
  margin-bottom: 0;
}
.kztvv0d2 {
  margin-right: var(--_2btcce0);
}
.kztvv0d6 {
  margin-right: var(--_2btcce1);
}
.kztvv0da {
  margin-right: var(--_2btcce2);
}
.kztvv0de {
  margin-right: var(--_2btcce3);
}
.kztvv0di {
  margin-right: var(--_2btcce4);
}
.kztvv0dm {
  margin-right: var(--_2btcce5);
}
.kztvv0dq {
  margin-right: var(--_2btcce6);
}
.kztvv0du {
  margin-right: var(--_2btcce7);
}
.kztvv0dy {
  margin-right: var(--_2btcce8);
}
.kztvv0e2 {
  margin-right: 0;
}
.kztvv0e6 {
  margin-left: var(--_2btcce0);
}
.kztvv0ea {
  margin-left: var(--_2btcce1);
}
.kztvv0ee {
  margin-left: var(--_2btcce2);
}
.kztvv0ei {
  margin-left: var(--_2btcce3);
}
.kztvv0em {
  margin-left: var(--_2btcce4);
}
.kztvv0eq {
  margin-left: var(--_2btcce5);
}
.kztvv0eu {
  margin-left: var(--_2btcce6);
}
.kztvv0ey {
  margin-left: var(--_2btcce7);
}
.kztvv0f2 {
  margin-left: var(--_2btcce8);
}
.kztvv0f6 {
  margin-left: 0;
}
.kztvv0fa {
  align-items: flex-start;
}
.kztvv0fe {
  align-items: center;
}
.kztvv0fi {
  align-items: flex-end;
}
.kztvv0fm {
  justify-content: flex-start;
}
.kztvv0fq {
  justify-content: center;
}
.kztvv0fu {
  justify-content: flex-end;
}
.kztvv0fy {
  justify-content: space-between;
}
.kztvv0g2 {
  flex-direction: row;
}
.kztvv0g6 {
  flex-direction: row-reverse;
}
.kztvv0ga {
  flex-direction: column;
}
.kztvv0ge {
  flex-direction: column-reverse;
}
.kztvv0gi {
  flex-wrap: wrap;
}
.kztvv0gm {
  flex-wrap: nowrap;
}
.kztvv0gq {
  flex-shrink: 0;
}
.kztvv0gu {
  flex-grow: 0;
}
.kztvv0gy {
  flex-grow: 1;
}
.kztvv0h2 {
  text-align: left;
}
.kztvv0h6 {
  text-align: center;
}
.kztvv0ha {
  text-align: right;
}
@media screen and (min-width: 740px) {
  .kztvv04v {
    display: none;
  }
  .kztvv04z {
    display: block;
  }
  .kztvv053 {
    display: inline;
  }
  .kztvv057 {
    display: inline-block;
  }
  .kztvv05b {
    display: flex;
  }
  .kztvv05f {
    position: relative;
  }
  .kztvv05j {
    position: absolute;
  }
  .kztvv05n {
    position: fixed;
  }
  .kztvv05r {
    border-radius: 0;
  }
  .kztvv05v {
    border-radius: 9999px;
  }
  .kztvv05z {
    border-radius: var(--_2btcceb);
  }
  .kztvv063 {
    border-radius: var(--_2btccec);
  }
  .kztvv067 {
    border-radius: var(--_2btcced);
  }
  .kztvv06b {
    border-radius: var(--_2btccee);
  }
  .kztvv06f {
    padding-top: var(--_2btcce0);
  }
  .kztvv06j {
    padding-top: var(--_2btcce1);
  }
  .kztvv06n {
    padding-top: var(--_2btcce2);
  }
  .kztvv06r {
    padding-top: var(--_2btcce3);
  }
  .kztvv06v {
    padding-top: var(--_2btcce4);
  }
  .kztvv06z {
    padding-top: var(--_2btcce5);
  }
  .kztvv073 {
    padding-top: var(--_2btcce6);
  }
  .kztvv077 {
    padding-top: var(--_2btcce7);
  }
  .kztvv07b {
    padding-top: var(--_2btcce8);
  }
  .kztvv07f {
    padding-top: 0;
  }
  .kztvv07j {
    padding-bottom: var(--_2btcce0);
  }
  .kztvv07n {
    padding-bottom: var(--_2btcce1);
  }
  .kztvv07r {
    padding-bottom: var(--_2btcce2);
  }
  .kztvv07v {
    padding-bottom: var(--_2btcce3);
  }
  .kztvv07z {
    padding-bottom: var(--_2btcce4);
  }
  .kztvv083 {
    padding-bottom: var(--_2btcce5);
  }
  .kztvv087 {
    padding-bottom: var(--_2btcce6);
  }
  .kztvv08b {
    padding-bottom: var(--_2btcce7);
  }
  .kztvv08f {
    padding-bottom: var(--_2btcce8);
  }
  .kztvv08j {
    padding-bottom: 0;
  }
  .kztvv08n {
    padding-right: var(--_2btcce0);
  }
  .kztvv08r {
    padding-right: var(--_2btcce1);
  }
  .kztvv08v {
    padding-right: var(--_2btcce2);
  }
  .kztvv08z {
    padding-right: var(--_2btcce3);
  }
  .kztvv093 {
    padding-right: var(--_2btcce4);
  }
  .kztvv097 {
    padding-right: var(--_2btcce5);
  }
  .kztvv09b {
    padding-right: var(--_2btcce6);
  }
  .kztvv09f {
    padding-right: var(--_2btcce7);
  }
  .kztvv09j {
    padding-right: var(--_2btcce8);
  }
  .kztvv09n {
    padding-right: 0;
  }
  .kztvv09r {
    padding-left: var(--_2btcce0);
  }
  .kztvv09v {
    padding-left: var(--_2btcce1);
  }
  .kztvv09z {
    padding-left: var(--_2btcce2);
  }
  .kztvv0a3 {
    padding-left: var(--_2btcce3);
  }
  .kztvv0a7 {
    padding-left: var(--_2btcce4);
  }
  .kztvv0ab {
    padding-left: var(--_2btcce5);
  }
  .kztvv0af {
    padding-left: var(--_2btcce6);
  }
  .kztvv0aj {
    padding-left: var(--_2btcce7);
  }
  .kztvv0an {
    padding-left: var(--_2btcce8);
  }
  .kztvv0ar {
    padding-left: 0;
  }
  .kztvv0av {
    margin-top: var(--_2btcce0);
  }
  .kztvv0az {
    margin-top: var(--_2btcce1);
  }
  .kztvv0b3 {
    margin-top: var(--_2btcce2);
  }
  .kztvv0b7 {
    margin-top: var(--_2btcce3);
  }
  .kztvv0bb {
    margin-top: var(--_2btcce4);
  }
  .kztvv0bf {
    margin-top: var(--_2btcce5);
  }
  .kztvv0bj {
    margin-top: var(--_2btcce6);
  }
  .kztvv0bn {
    margin-top: var(--_2btcce7);
  }
  .kztvv0br {
    margin-top: var(--_2btcce8);
  }
  .kztvv0bv {
    margin-top: 0;
  }
  .kztvv0bz {
    margin-bottom: var(--_2btcce0);
  }
  .kztvv0c3 {
    margin-bottom: var(--_2btcce1);
  }
  .kztvv0c7 {
    margin-bottom: var(--_2btcce2);
  }
  .kztvv0cb {
    margin-bottom: var(--_2btcce3);
  }
  .kztvv0cf {
    margin-bottom: var(--_2btcce4);
  }
  .kztvv0cj {
    margin-bottom: var(--_2btcce5);
  }
  .kztvv0cn {
    margin-bottom: var(--_2btcce6);
  }
  .kztvv0cr {
    margin-bottom: var(--_2btcce7);
  }
  .kztvv0cv {
    margin-bottom: var(--_2btcce8);
  }
  .kztvv0cz {
    margin-bottom: 0;
  }
  .kztvv0d3 {
    margin-right: var(--_2btcce0);
  }
  .kztvv0d7 {
    margin-right: var(--_2btcce1);
  }
  .kztvv0db {
    margin-right: var(--_2btcce2);
  }
  .kztvv0df {
    margin-right: var(--_2btcce3);
  }
  .kztvv0dj {
    margin-right: var(--_2btcce4);
  }
  .kztvv0dn {
    margin-right: var(--_2btcce5);
  }
  .kztvv0dr {
    margin-right: var(--_2btcce6);
  }
  .kztvv0dv {
    margin-right: var(--_2btcce7);
  }
  .kztvv0dz {
    margin-right: var(--_2btcce8);
  }
  .kztvv0e3 {
    margin-right: 0;
  }
  .kztvv0e7 {
    margin-left: var(--_2btcce0);
  }
  .kztvv0eb {
    margin-left: var(--_2btcce1);
  }
  .kztvv0ef {
    margin-left: var(--_2btcce2);
  }
  .kztvv0ej {
    margin-left: var(--_2btcce3);
  }
  .kztvv0en {
    margin-left: var(--_2btcce4);
  }
  .kztvv0er {
    margin-left: var(--_2btcce5);
  }
  .kztvv0ev {
    margin-left: var(--_2btcce6);
  }
  .kztvv0ez {
    margin-left: var(--_2btcce7);
  }
  .kztvv0f3 {
    margin-left: var(--_2btcce8);
  }
  .kztvv0f7 {
    margin-left: 0;
  }
  .kztvv0fb {
    align-items: flex-start;
  }
  .kztvv0ff {
    align-items: center;
  }
  .kztvv0fj {
    align-items: flex-end;
  }
  .kztvv0fn {
    justify-content: flex-start;
  }
  .kztvv0fr {
    justify-content: center;
  }
  .kztvv0fv {
    justify-content: flex-end;
  }
  .kztvv0fz {
    justify-content: space-between;
  }
  .kztvv0g3 {
    flex-direction: row;
  }
  .kztvv0g7 {
    flex-direction: row-reverse;
  }
  .kztvv0gb {
    flex-direction: column;
  }
  .kztvv0gf {
    flex-direction: column-reverse;
  }
  .kztvv0gj {
    flex-wrap: wrap;
  }
  .kztvv0gn {
    flex-wrap: nowrap;
  }
  .kztvv0gr {
    flex-shrink: 0;
  }
  .kztvv0gv {
    flex-grow: 0;
  }
  .kztvv0gz {
    flex-grow: 1;
  }
  .kztvv0h3 {
    text-align: left;
  }
  .kztvv0h7 {
    text-align: center;
  }
  .kztvv0hb {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  .kztvv04w {
    display: none;
  }
  .kztvv050 {
    display: block;
  }
  .kztvv054 {
    display: inline;
  }
  .kztvv058 {
    display: inline-block;
  }
  .kztvv05c {
    display: flex;
  }
  .kztvv05g {
    position: relative;
  }
  .kztvv05k {
    position: absolute;
  }
  .kztvv05o {
    position: fixed;
  }
  .kztvv05s {
    border-radius: 0;
  }
  .kztvv05w {
    border-radius: 9999px;
  }
  .kztvv060 {
    border-radius: var(--_2btcceb);
  }
  .kztvv064 {
    border-radius: var(--_2btccec);
  }
  .kztvv068 {
    border-radius: var(--_2btcced);
  }
  .kztvv06c {
    border-radius: var(--_2btccee);
  }
  .kztvv06g {
    padding-top: var(--_2btcce0);
  }
  .kztvv06k {
    padding-top: var(--_2btcce1);
  }
  .kztvv06o {
    padding-top: var(--_2btcce2);
  }
  .kztvv06s {
    padding-top: var(--_2btcce3);
  }
  .kztvv06w {
    padding-top: var(--_2btcce4);
  }
  .kztvv070 {
    padding-top: var(--_2btcce5);
  }
  .kztvv074 {
    padding-top: var(--_2btcce6);
  }
  .kztvv078 {
    padding-top: var(--_2btcce7);
  }
  .kztvv07c {
    padding-top: var(--_2btcce8);
  }
  .kztvv07g {
    padding-top: 0;
  }
  .kztvv07k {
    padding-bottom: var(--_2btcce0);
  }
  .kztvv07o {
    padding-bottom: var(--_2btcce1);
  }
  .kztvv07s {
    padding-bottom: var(--_2btcce2);
  }
  .kztvv07w {
    padding-bottom: var(--_2btcce3);
  }
  .kztvv080 {
    padding-bottom: var(--_2btcce4);
  }
  .kztvv084 {
    padding-bottom: var(--_2btcce5);
  }
  .kztvv088 {
    padding-bottom: var(--_2btcce6);
  }
  .kztvv08c {
    padding-bottom: var(--_2btcce7);
  }
  .kztvv08g {
    padding-bottom: var(--_2btcce8);
  }
  .kztvv08k {
    padding-bottom: 0;
  }
  .kztvv08o {
    padding-right: var(--_2btcce0);
  }
  .kztvv08s {
    padding-right: var(--_2btcce1);
  }
  .kztvv08w {
    padding-right: var(--_2btcce2);
  }
  .kztvv090 {
    padding-right: var(--_2btcce3);
  }
  .kztvv094 {
    padding-right: var(--_2btcce4);
  }
  .kztvv098 {
    padding-right: var(--_2btcce5);
  }
  .kztvv09c {
    padding-right: var(--_2btcce6);
  }
  .kztvv09g {
    padding-right: var(--_2btcce7);
  }
  .kztvv09k {
    padding-right: var(--_2btcce8);
  }
  .kztvv09o {
    padding-right: 0;
  }
  .kztvv09s {
    padding-left: var(--_2btcce0);
  }
  .kztvv09w {
    padding-left: var(--_2btcce1);
  }
  .kztvv0a0 {
    padding-left: var(--_2btcce2);
  }
  .kztvv0a4 {
    padding-left: var(--_2btcce3);
  }
  .kztvv0a8 {
    padding-left: var(--_2btcce4);
  }
  .kztvv0ac {
    padding-left: var(--_2btcce5);
  }
  .kztvv0ag {
    padding-left: var(--_2btcce6);
  }
  .kztvv0ak {
    padding-left: var(--_2btcce7);
  }
  .kztvv0ao {
    padding-left: var(--_2btcce8);
  }
  .kztvv0as {
    padding-left: 0;
  }
  .kztvv0aw {
    margin-top: var(--_2btcce0);
  }
  .kztvv0b0 {
    margin-top: var(--_2btcce1);
  }
  .kztvv0b4 {
    margin-top: var(--_2btcce2);
  }
  .kztvv0b8 {
    margin-top: var(--_2btcce3);
  }
  .kztvv0bc {
    margin-top: var(--_2btcce4);
  }
  .kztvv0bg {
    margin-top: var(--_2btcce5);
  }
  .kztvv0bk {
    margin-top: var(--_2btcce6);
  }
  .kztvv0bo {
    margin-top: var(--_2btcce7);
  }
  .kztvv0bs {
    margin-top: var(--_2btcce8);
  }
  .kztvv0bw {
    margin-top: 0;
  }
  .kztvv0c0 {
    margin-bottom: var(--_2btcce0);
  }
  .kztvv0c4 {
    margin-bottom: var(--_2btcce1);
  }
  .kztvv0c8 {
    margin-bottom: var(--_2btcce2);
  }
  .kztvv0cc {
    margin-bottom: var(--_2btcce3);
  }
  .kztvv0cg {
    margin-bottom: var(--_2btcce4);
  }
  .kztvv0ck {
    margin-bottom: var(--_2btcce5);
  }
  .kztvv0co {
    margin-bottom: var(--_2btcce6);
  }
  .kztvv0cs {
    margin-bottom: var(--_2btcce7);
  }
  .kztvv0cw {
    margin-bottom: var(--_2btcce8);
  }
  .kztvv0d0 {
    margin-bottom: 0;
  }
  .kztvv0d4 {
    margin-right: var(--_2btcce0);
  }
  .kztvv0d8 {
    margin-right: var(--_2btcce1);
  }
  .kztvv0dc {
    margin-right: var(--_2btcce2);
  }
  .kztvv0dg {
    margin-right: var(--_2btcce3);
  }
  .kztvv0dk {
    margin-right: var(--_2btcce4);
  }
  .kztvv0do {
    margin-right: var(--_2btcce5);
  }
  .kztvv0ds {
    margin-right: var(--_2btcce6);
  }
  .kztvv0dw {
    margin-right: var(--_2btcce7);
  }
  .kztvv0e0 {
    margin-right: var(--_2btcce8);
  }
  .kztvv0e4 {
    margin-right: 0;
  }
  .kztvv0e8 {
    margin-left: var(--_2btcce0);
  }
  .kztvv0ec {
    margin-left: var(--_2btcce1);
  }
  .kztvv0eg {
    margin-left: var(--_2btcce2);
  }
  .kztvv0ek {
    margin-left: var(--_2btcce3);
  }
  .kztvv0eo {
    margin-left: var(--_2btcce4);
  }
  .kztvv0es {
    margin-left: var(--_2btcce5);
  }
  .kztvv0ew {
    margin-left: var(--_2btcce6);
  }
  .kztvv0f0 {
    margin-left: var(--_2btcce7);
  }
  .kztvv0f4 {
    margin-left: var(--_2btcce8);
  }
  .kztvv0f8 {
    margin-left: 0;
  }
  .kztvv0fc {
    align-items: flex-start;
  }
  .kztvv0fg {
    align-items: center;
  }
  .kztvv0fk {
    align-items: flex-end;
  }
  .kztvv0fo {
    justify-content: flex-start;
  }
  .kztvv0fs {
    justify-content: center;
  }
  .kztvv0fw {
    justify-content: flex-end;
  }
  .kztvv0g0 {
    justify-content: space-between;
  }
  .kztvv0g4 {
    flex-direction: row;
  }
  .kztvv0g8 {
    flex-direction: row-reverse;
  }
  .kztvv0gc {
    flex-direction: column;
  }
  .kztvv0gg {
    flex-direction: column-reverse;
  }
  .kztvv0gk {
    flex-wrap: wrap;
  }
  .kztvv0go {
    flex-wrap: nowrap;
  }
  .kztvv0gs {
    flex-shrink: 0;
  }
  .kztvv0gw {
    flex-grow: 0;
  }
  .kztvv0h0 {
    flex-grow: 1;
  }
  .kztvv0h4 {
    text-align: left;
  }
  .kztvv0h8 {
    text-align: center;
  }
  .kztvv0hc {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  .kztvv04x {
    display: none;
  }
  .kztvv051 {
    display: block;
  }
  .kztvv055 {
    display: inline;
  }
  .kztvv059 {
    display: inline-block;
  }
  .kztvv05d {
    display: flex;
  }
  .kztvv05h {
    position: relative;
  }
  .kztvv05l {
    position: absolute;
  }
  .kztvv05p {
    position: fixed;
  }
  .kztvv05t {
    border-radius: 0;
  }
  .kztvv05x {
    border-radius: 9999px;
  }
  .kztvv061 {
    border-radius: var(--_2btcceb);
  }
  .kztvv065 {
    border-radius: var(--_2btccec);
  }
  .kztvv069 {
    border-radius: var(--_2btcced);
  }
  .kztvv06d {
    border-radius: var(--_2btccee);
  }
  .kztvv06h {
    padding-top: var(--_2btcce0);
  }
  .kztvv06l {
    padding-top: var(--_2btcce1);
  }
  .kztvv06p {
    padding-top: var(--_2btcce2);
  }
  .kztvv06t {
    padding-top: var(--_2btcce3);
  }
  .kztvv06x {
    padding-top: var(--_2btcce4);
  }
  .kztvv071 {
    padding-top: var(--_2btcce5);
  }
  .kztvv075 {
    padding-top: var(--_2btcce6);
  }
  .kztvv079 {
    padding-top: var(--_2btcce7);
  }
  .kztvv07d {
    padding-top: var(--_2btcce8);
  }
  .kztvv07h {
    padding-top: 0;
  }
  .kztvv07l {
    padding-bottom: var(--_2btcce0);
  }
  .kztvv07p {
    padding-bottom: var(--_2btcce1);
  }
  .kztvv07t {
    padding-bottom: var(--_2btcce2);
  }
  .kztvv07x {
    padding-bottom: var(--_2btcce3);
  }
  .kztvv081 {
    padding-bottom: var(--_2btcce4);
  }
  .kztvv085 {
    padding-bottom: var(--_2btcce5);
  }
  .kztvv089 {
    padding-bottom: var(--_2btcce6);
  }
  .kztvv08d {
    padding-bottom: var(--_2btcce7);
  }
  .kztvv08h {
    padding-bottom: var(--_2btcce8);
  }
  .kztvv08l {
    padding-bottom: 0;
  }
  .kztvv08p {
    padding-right: var(--_2btcce0);
  }
  .kztvv08t {
    padding-right: var(--_2btcce1);
  }
  .kztvv08x {
    padding-right: var(--_2btcce2);
  }
  .kztvv091 {
    padding-right: var(--_2btcce3);
  }
  .kztvv095 {
    padding-right: var(--_2btcce4);
  }
  .kztvv099 {
    padding-right: var(--_2btcce5);
  }
  .kztvv09d {
    padding-right: var(--_2btcce6);
  }
  .kztvv09h {
    padding-right: var(--_2btcce7);
  }
  .kztvv09l {
    padding-right: var(--_2btcce8);
  }
  .kztvv09p {
    padding-right: 0;
  }
  .kztvv09t {
    padding-left: var(--_2btcce0);
  }
  .kztvv09x {
    padding-left: var(--_2btcce1);
  }
  .kztvv0a1 {
    padding-left: var(--_2btcce2);
  }
  .kztvv0a5 {
    padding-left: var(--_2btcce3);
  }
  .kztvv0a9 {
    padding-left: var(--_2btcce4);
  }
  .kztvv0ad {
    padding-left: var(--_2btcce5);
  }
  .kztvv0ah {
    padding-left: var(--_2btcce6);
  }
  .kztvv0al {
    padding-left: var(--_2btcce7);
  }
  .kztvv0ap {
    padding-left: var(--_2btcce8);
  }
  .kztvv0at {
    padding-left: 0;
  }
  .kztvv0ax {
    margin-top: var(--_2btcce0);
  }
  .kztvv0b1 {
    margin-top: var(--_2btcce1);
  }
  .kztvv0b5 {
    margin-top: var(--_2btcce2);
  }
  .kztvv0b9 {
    margin-top: var(--_2btcce3);
  }
  .kztvv0bd {
    margin-top: var(--_2btcce4);
  }
  .kztvv0bh {
    margin-top: var(--_2btcce5);
  }
  .kztvv0bl {
    margin-top: var(--_2btcce6);
  }
  .kztvv0bp {
    margin-top: var(--_2btcce7);
  }
  .kztvv0bt {
    margin-top: var(--_2btcce8);
  }
  .kztvv0bx {
    margin-top: 0;
  }
  .kztvv0c1 {
    margin-bottom: var(--_2btcce0);
  }
  .kztvv0c5 {
    margin-bottom: var(--_2btcce1);
  }
  .kztvv0c9 {
    margin-bottom: var(--_2btcce2);
  }
  .kztvv0cd {
    margin-bottom: var(--_2btcce3);
  }
  .kztvv0ch {
    margin-bottom: var(--_2btcce4);
  }
  .kztvv0cl {
    margin-bottom: var(--_2btcce5);
  }
  .kztvv0cp {
    margin-bottom: var(--_2btcce6);
  }
  .kztvv0ct {
    margin-bottom: var(--_2btcce7);
  }
  .kztvv0cx {
    margin-bottom: var(--_2btcce8);
  }
  .kztvv0d1 {
    margin-bottom: 0;
  }
  .kztvv0d5 {
    margin-right: var(--_2btcce0);
  }
  .kztvv0d9 {
    margin-right: var(--_2btcce1);
  }
  .kztvv0dd {
    margin-right: var(--_2btcce2);
  }
  .kztvv0dh {
    margin-right: var(--_2btcce3);
  }
  .kztvv0dl {
    margin-right: var(--_2btcce4);
  }
  .kztvv0dp {
    margin-right: var(--_2btcce5);
  }
  .kztvv0dt {
    margin-right: var(--_2btcce6);
  }
  .kztvv0dx {
    margin-right: var(--_2btcce7);
  }
  .kztvv0e1 {
    margin-right: var(--_2btcce8);
  }
  .kztvv0e5 {
    margin-right: 0;
  }
  .kztvv0e9 {
    margin-left: var(--_2btcce0);
  }
  .kztvv0ed {
    margin-left: var(--_2btcce1);
  }
  .kztvv0eh {
    margin-left: var(--_2btcce2);
  }
  .kztvv0el {
    margin-left: var(--_2btcce3);
  }
  .kztvv0ep {
    margin-left: var(--_2btcce4);
  }
  .kztvv0et {
    margin-left: var(--_2btcce5);
  }
  .kztvv0ex {
    margin-left: var(--_2btcce6);
  }
  .kztvv0f1 {
    margin-left: var(--_2btcce7);
  }
  .kztvv0f5 {
    margin-left: var(--_2btcce8);
  }
  .kztvv0f9 {
    margin-left: 0;
  }
  .kztvv0fd {
    align-items: flex-start;
  }
  .kztvv0fh {
    align-items: center;
  }
  .kztvv0fl {
    align-items: flex-end;
  }
  .kztvv0fp {
    justify-content: flex-start;
  }
  .kztvv0ft {
    justify-content: center;
  }
  .kztvv0fx {
    justify-content: flex-end;
  }
  .kztvv0g1 {
    justify-content: space-between;
  }
  .kztvv0g5 {
    flex-direction: row;
  }
  .kztvv0g9 {
    flex-direction: row-reverse;
  }
  .kztvv0gd {
    flex-direction: column;
  }
  .kztvv0gh {
    flex-direction: column-reverse;
  }
  .kztvv0gl {
    flex-wrap: wrap;
  }
  .kztvv0gp {
    flex-wrap: nowrap;
  }
  .kztvv0gt {
    flex-shrink: 0;
  }
  .kztvv0gx {
    flex-grow: 0;
  }
  .kztvv0h1 {
    flex-grow: 1;
  }
  .kztvv0h5 {
    text-align: left;
  }
  .kztvv0h9 {
    text-align: center;
  }
  .kztvv0hd {
    text-align: right;
  }
}
._8on0wp4 {
  font-size: var(--_8on0wp0);
  line-height: var(--_8on0wp1);
}
._8on0wp4:before {
  content: "";
  display: table;
  margin-bottom: var(--_8on0wp2);
}
._8on0wp4:after {
  content: "";
  display: table;
  margin-top: var(--_8on0wp3);
}
._1y7skkk0 {
  font-family: var(--_2btcce2w);
}
._1y7skkk1 {
  font-weight: var(--_2btcce46);
}
._1y7skkk2 {
  font-weight: var(--_2btcce47);
}
._1y7skkk3 {
  font-weight: var(--_2btcce48);
}
._1y7skkk4 {
  --_8on0wp0: var(--_2btcce32);
  --_8on0wp1: var(--_2btcce33);
  --_8on0wp2: var(--_2btcce35);
  --_8on0wp3: var(--_2btcce36);
}
._1y7skkk7 {
  --_8on0wp0: var(--_2btcce3c);
  --_8on0wp1: var(--_2btcce3d);
  --_8on0wp2: var(--_2btcce3f);
  --_8on0wp3: var(--_2btcce3g);
}
._1y7skkka {
  --_8on0wp0: var(--_2btcce3m);
  --_8on0wp1: var(--_2btcce3n);
  --_8on0wp2: var(--_2btcce3p);
  --_8on0wp3: var(--_2btcce3q);
}
._1y7skkkd {
  --_8on0wp0: var(--_2btcce3w);
  --_8on0wp1: var(--_2btcce3x);
  --_8on0wp2: var(--_2btcce3z);
  --_8on0wp3: var(--_2btcce40);
}
._1y7skkkg {
  font-size: var(--_2btcce32);
  line-height: var(--_2btcce33);
}
._1y7skkkh {
  font-size: var(--_2btcce3c);
  line-height: var(--_2btcce3d);
}
._1y7skkki {
  font-size: var(--_2btcce3m);
  line-height: var(--_2btcce3n);
}
._1y7skkkj {
  font-size: var(--_2btcce3w);
  line-height: var(--_2btcce3x);
}
._1y7skkkk {
  font-weight: var(--_2btcce5d);
}
._1y7skkkl {
  font-weight: var(--_2btcce5e);
}
._1y7skkkm {
  --_8on0wp0: var(--_2btcce49);
  --_8on0wp1: var(--_2btcce4a);
  --_8on0wp2: var(--_2btcce4c);
  --_8on0wp3: var(--_2btcce4d);
}
._1y7skkkp {
  --_8on0wp0: var(--_2btcce4j);
  --_8on0wp1: var(--_2btcce4k);
  --_8on0wp2: var(--_2btcce4m);
  --_8on0wp3: var(--_2btcce4n);
}
._1y7skkks {
  --_8on0wp0: var(--_2btcce4t);
  --_8on0wp1: var(--_2btcce4u);
  --_8on0wp2: var(--_2btcce4w);
  --_8on0wp3: var(--_2btcce4x);
}
._1y7skkkv {
  --_8on0wp0: var(--_2btcce53);
  --_8on0wp1: var(--_2btcce54);
  --_8on0wp2: var(--_2btcce56);
  --_8on0wp3: var(--_2btcce57);
}
html:not(.kztvv0z) ._1y7skkk18 {
  --_1y7skkky: var(--_2btcce19);
  --_1y7skkkz: var(--_2btcce17);
  --_1y7skkk10: var(--_2btcce1d);
  --_1y7skkk11: var(--_2btcce1o);
  --_1y7skkk12: var(--_2btcce1m);
  --_1y7skkk13: var(--_2btcce15);
  --_1y7skkk14: var(--_2btcce1b);
  --_1y7skkk15: var(--_2btcce1k);
  --_1y7skkk16: var(--_2btcce1r);
  --_1y7skkk17: var(--_2btcce1f);
}
html:not(.kztvv0z) ._1y7skkk19 {
  --_1y7skkky: var(--_2btcce1a);
  --_1y7skkkz: var(--_2btcce18);
  --_1y7skkk10: var(--_2btcce1e);
  --_1y7skkk11: var(--_2btcce1p);
  --_1y7skkk12: var(--_2btcce1n);
  --_1y7skkk13: var(--_2btcce16);
  --_1y7skkk14: var(--_2btcce1c);
  --_1y7skkk15: var(--_2btcce1l);
  --_1y7skkk16: var(--_2btcce1s);
  --_1y7skkk17: var(--_2btcce1h);
}
html.kztvv0z ._1y7skkk1a {
  --_1y7skkky: var(--_2btcce19);
  --_1y7skkkz: var(--_2btcce17);
  --_1y7skkk10: var(--_2btcce1d);
  --_1y7skkk11: var(--_2btcce1o);
  --_1y7skkk12: var(--_2btcce1m);
  --_1y7skkk13: var(--_2btcce15);
  --_1y7skkk14: var(--_2btcce1b);
  --_1y7skkk15: var(--_2btcce1k);
  --_1y7skkk16: var(--_2btcce1r);
  --_1y7skkk17: var(--_2btcce1f);
}
html.kztvv0z ._1y7skkk1b {
  --_1y7skkky: var(--_2btcce1a);
  --_1y7skkkz: var(--_2btcce18);
  --_1y7skkk10: var(--_2btcce1e);
  --_1y7skkk11: var(--_2btcce1p);
  --_1y7skkk12: var(--_2btcce1n);
  --_1y7skkk13: var(--_2btcce16);
  --_1y7skkk14: var(--_2btcce1c);
  --_1y7skkk15: var(--_2btcce1l);
  --_1y7skkk16: var(--_2btcce1s);
  --_1y7skkk17: var(--_2btcce1h);
}
html:not(.kztvv0z) ._1y7skkk1c,
html:not(.kztvv0z) ._1y7skkk1d,
html:not(.kztvv0z) ._1y7skkk1e,
html:not(.kztvv0z) ._1y7skkk1f {
  --_1y7skkk15: var(--_1y7skkky);
}
html:not(.kztvv0z) ._1y7skkk1g,
html:not(.kztvv0z) ._1y7skkk1h {
  --_1y7skkk15: var(--_1y7skkkz);
}
html:not(.kztvv0z) ._1y7skkk1i {
  --_1y7skkk15: var(--_1y7skkk12);
}
html:not(.kztvv0z) ._1y7skkk1j {
  --_1y7skkk15: var(--_1y7skkk10);
}
html:not(.kztvv0z) ._1y7skkk1k {
  --_1y7skkk15: var(--_1y7skkk11);
}
html.kztvv0z ._1y7skkk1l,
html.kztvv0z ._1y7skkk1m,
html.kztvv0z ._1y7skkk1n,
html.kztvv0z ._1y7skkk1o {
  --_1y7skkk15: var(--_1y7skkky);
}
html.kztvv0z ._1y7skkk1p,
html.kztvv0z ._1y7skkk1q {
  --_1y7skkk15: var(--_1y7skkkz);
}
html.kztvv0z ._1y7skkk1r {
  --_1y7skkk15: var(--_1y7skkk12);
}
html.kztvv0z ._1y7skkk1s {
  --_1y7skkk15: var(--_1y7skkk10);
}
html.kztvv0z ._1y7skkk1t {
  --_1y7skkk15: var(--_1y7skkk11);
}
._1y7skkk1u {
  color: var(--_1y7skkky);
}
._1y7skkk1v {
  color: var(--_1y7skkkz);
}
._1y7skkk1w {
  color: var(--_1y7skkk10);
}
._1y7skkk1x {
  color: var(--_1y7skkk11);
}
._1y7skkk1y {
  color: var(--_1y7skkk12);
}
._1y7skkk1z {
  color: var(--_1y7skkk13);
}
._1y7skkk20 {
  color: var(--_1y7skkk14);
}
._1y7skkk21 {
  color: var(--_1y7skkk15);
}
._1y7skkk22 {
  color: var(--_1y7skkk16);
}
._1y7skkk23 {
  color: var(--_1y7skkk17);
}
._1y7skkk24 {
  padding-bottom: calc((var(--_2btcce9) - var(--_2btcce33)) / 2);
  padding-top: calc((var(--_2btcce9) - var(--_2btcce33)) / 2);
}
._1y7skkk25 {
  padding-bottom: calc((var(--_2btcce9) - var(--_2btcce3d)) / 2);
  padding-top: calc((var(--_2btcce9) - var(--_2btcce3d)) / 2);
}
._1y7skkk26 {
  padding-bottom: calc((var(--_2btcce9) - var(--_2btcce3n)) / 2);
  padding-top: calc((var(--_2btcce9) - var(--_2btcce3n)) / 2);
}
._1y7skkk27 {
  padding-bottom: calc((var(--_2btcce9) - var(--_2btcce3x)) / 2);
  padding-top: calc((var(--_2btcce9) - var(--_2btcce3x)) / 2);
}
@media screen and (min-width: 740px) {
  ._1y7skkk4 {
    --_8on0wp0: var(--_2btcce37);
    --_8on0wp1: var(--_2btcce38);
    --_8on0wp2: var(--_2btcce3a);
    --_8on0wp3: var(--_2btcce3b);
  }
  ._1y7skkk7 {
    --_8on0wp0: var(--_2btcce3h);
    --_8on0wp1: var(--_2btcce3i);
    --_8on0wp2: var(--_2btcce3k);
    --_8on0wp3: var(--_2btcce3l);
  }
  ._1y7skkka {
    --_8on0wp0: var(--_2btcce3r);
    --_8on0wp1: var(--_2btcce3s);
    --_8on0wp2: var(--_2btcce3u);
    --_8on0wp3: var(--_2btcce3v);
  }
  ._1y7skkkd {
    --_8on0wp0: var(--_2btcce41);
    --_8on0wp1: var(--_2btcce42);
    --_8on0wp2: var(--_2btcce44);
    --_8on0wp3: var(--_2btcce45);
  }
  ._1y7skkkg {
    font-size: var(--_2btcce37);
    line-height: var(--_2btcce38);
  }
  ._1y7skkkh {
    font-size: var(--_2btcce3h);
    line-height: var(--_2btcce3i);
  }
  ._1y7skkki {
    font-size: var(--_2btcce3r);
    line-height: var(--_2btcce3s);
  }
  ._1y7skkkj {
    font-size: var(--_2btcce41);
    line-height: var(--_2btcce42);
  }
  ._1y7skkkm {
    --_8on0wp0: var(--_2btcce4e);
    --_8on0wp1: var(--_2btcce4f);
    --_8on0wp2: var(--_2btcce4h);
    --_8on0wp3: var(--_2btcce4i);
  }
  ._1y7skkkp {
    --_8on0wp0: var(--_2btcce4o);
    --_8on0wp1: var(--_2btcce4p);
    --_8on0wp2: var(--_2btcce4r);
    --_8on0wp3: var(--_2btcce4s);
  }
  ._1y7skkks {
    --_8on0wp0: var(--_2btcce4y);
    --_8on0wp1: var(--_2btcce4z);
    --_8on0wp2: var(--_2btcce51);
    --_8on0wp3: var(--_2btcce52);
  }
  ._1y7skkkv {
    --_8on0wp0: var(--_2btcce58);
    --_8on0wp1: var(--_2btcce59);
    --_8on0wp2: var(--_2btcce5b);
    --_8on0wp3: var(--_2btcce5c);
  }
  ._1y7skkk24 {
    padding-bottom: calc((var(--_2btcce9) - var(--_2btcce38)) / 2);
    padding-top: calc((var(--_2btcce9) - var(--_2btcce38)) / 2);
  }
  ._1y7skkk25 {
    padding-bottom: calc((var(--_2btcce9) - var(--_2btcce3i)) / 2);
    padding-top: calc((var(--_2btcce9) - var(--_2btcce3i)) / 2);
  }
  ._1y7skkk26 {
    padding-bottom: calc((var(--_2btcce9) - var(--_2btcce3s)) / 2);
    padding-top: calc((var(--_2btcce9) - var(--_2btcce3s)) / 2);
  }
  ._1y7skkk27 {
    padding-bottom: calc((var(--_2btcce9) - var(--_2btcce42)) / 2);
    padding-top: calc((var(--_2btcce9) - var(--_2btcce42)) / 2);
  }
}
._1qi8hom0 {
  --_2btcce0: 24px;
  --_2btcce1: 4px;
  --_2btcce2: 8px;
  --_2btcce3: 12px;
  --_2btcce4: 20px;
  --_2btcce5: 32px;
  --_2btcce6: 48px;
  --_2btcce7: 96px;
  --_2btcce8: 120px;
  --_2btcce9: 44px;
  --_2btccea: 4px;
  --_2btcceb: 2px;
  --_2btccec: 4px;
  --_2btcced: 6px;
  --_2btccee: 10px;
  --_2btccef: #e60278;
  --_2btcceg: #f8b1dc;
  --_2btcceh: #fdc221;
  --_2btccei: #fee384;
  --_2btccej: #b91e1e;
  --_2btccek: #fb999a;
  --_2btccel: #838fa5;
  --_2btccem: rgba(159, 176, 245, 0.7);
  --_2btccen: #4964e9;
  --_2btcceo: #9fb0f5;
  --_2btccep: #1d559d;
  --_2btcceq: #98c9f1;
  --_2btccer: #2e3849;
  --_2btccet: #d2d7df;
  --_2btcces: #fff;
  --_2btcceu: #12784f;
  --_2btccev: #8bdec5;
  --_2btccew: #512eaa;
  --_2btccex: #c6acf5;
  --_2btccey: 1px;
  --_2btccez: 2px;
  --_2btcce10: 3px;
  --_2btcce11: 400px;
  --_2btcce12: 660px;
  --_2btcce13: 940px;
  --_2btcce14: 1280px;
  --_2btcce15: #e60278;
  --_2btcce16: #f8b1dc;
  --_2btcce17: #723d02;
  --_2btcce18: #fee384;
  --_2btcce19: #b91e1e;
  --_2btcce1a: #fb999a;
  --_2btcce1b: #4964e9;
  --_2btcce1c: #9fb0f5;
  --_2btcce1d: #1d559d;
  --_2btcce1e: #98c9f1;
  --_2btcce1f: #4964e9;
  --_2btcce1h: #9fb0f5;
  --_2btcce1g: #4964e9;
  --_2btcce1i: #512eaa;
  --_2btcce1j: #c6acf5;
  --_2btcce1k: #2e3849;
  --_2btcce1l: #fff;
  --_2btcce1m: #12784f;
  --_2btcce1n: #8bdec5;
  --_2btcce1o: #512eaa;
  --_2btcce1p: #c6acf5;
  --_2btcce1q: #f57c00;
  --_2btcce1r: #5a6881;
  --_2btcce1s: hsla(0, 0%, 100%, 0.65);
  --_2btcce1t: #f7f8fb;
  --_2btcce1u: #0e131b;
  --_2btcce1v: #0d3880;
  --_2btcce1w: #e60278;
  --_2btcce1x: #cd026b;
  --_2btcce1y: #fd0585;
  --_2btcce1z: #feeffa;
  --_2btcce20: #fdd7f3;
  --_2btcce21: #fde3f6;
  --_2btcce22: #fdc221;
  --_2btcce23: #fef8de;
  --_2btcce24: #b91e1e;
  --_2btcce25: #a31a1a;
  --_2btcce26: #db1616;
  --_2btcce27: #ffe3e2;
  --_2btcce28: #fef3f3;
  --_2btcce29: #fcdbdb;
  --_2btcce2a: #fde7e7;
  --_2btcce2b: #4964e9;
  --_2btcce2c: #3251e6;
  --_2btcce2d: #5975ff;
  --_2btcce2e: #f4f6fe;
  --_2btcce2f: #dde3fc;
  --_2btcce2g: #e8ecfd;
  --_2btcce2h: #1d559d;
  --_2btcce2i: #e3f2fb;
  --_2btcce2j: #2e3849;
  --_2btcce2k: #242c39;
  --_2btcce2l: #384459;
  --_2btcce2m: #eaecf1;
  --_2btcce2n: #f7f8fb;
  --_2btcce2o: #e6e9f3;
  --_2btcce2p: #eff1f7;
  --_2btcce2q: #12784f;
  --_2btcce2r: #e2f7f1;
  --_2btcce2s: #512eaa;
  --_2btcce2t: #f1e8fd;
  --_2btcce2u: #fff;
  --_2btcce2v: #1c2330;
  --_2btcce2w: Roboto, "Helvetica Neue", HelveticaNeue, Helvetica, Arial,
    sans-serif;
  --_2btcce2x: 1456;
  --_2btcce2y: 1900;
  --_2btcce2z: -500;
  --_2btcce30: 0;
  --_2btcce31: 2048;
  --_2btcce32: 12px;
  --_2btcce33: 20px;
  --_2btcce34: 8.5313px;
  --_2btcce35: -0.4642em;
  --_2btcce36: -0.4915em;
  --_2btcce37: 12px;
  --_2btcce38: 20px;
  --_2btcce39: 8.5313px;
  --_2btcce3a: -0.4642em;
  --_2btcce3b: -0.4915em;
  --_2btcce3c: 14px;
  --_2btcce3d: 20px;
  --_2btcce3e: 9.9531px;
  --_2btcce3f: -0.3451em;
  --_2btcce3g: -0.3725em;
  --_2btcce3h: 14px;
  --_2btcce3i: 20px;
  --_2btcce3j: 9.9531px;
  --_2btcce3k: -0.3451em;
  --_2btcce3l: -0.3725em;
  --_2btcce3m: 16px;
  --_2btcce3n: 24px;
  --_2btcce3o: 11.375px;
  --_2btcce3p: -0.3809em;
  --_2btcce3q: -0.4082em;
  --_2btcce3r: 16px;
  --_2btcce3s: 24px;
  --_2btcce3t: 11.375px;
  --_2btcce3u: -0.3809em;
  --_2btcce3v: -0.4082em;
  --_2btcce3w: 18px;
  --_2btcce3x: 28px;
  --_2btcce3y: 12.7969px;
  --_2btcce3z: -0.4086em;
  --_2btcce40: -0.436em;
  --_2btcce41: 18px;
  --_2btcce42: 28px;
  --_2btcce43: 12.7969px;
  --_2btcce44: -0.4086em;
  --_2btcce45: -0.436em;
  --_2btcce46: 400;
  --_2btcce47: 600;
  --_2btcce48: 700;
  --_2btcce49: 28px;
  --_2btcce4a: 36px;
  --_2btcce4b: 19.9063px;
  --_2btcce4c: -0.2737em;
  --_2btcce4d: -0.3011em;
  --_2btcce4e: 42px;
  --_2btcce4f: 44px;
  --_2btcce4g: 29.8594px;
  --_2btcce4h: -0.1547em;
  --_2btcce4i: -0.182em;
  --_2btcce4j: 21px;
  --_2btcce4k: 32px;
  --_2btcce4l: 14.9297px;
  --_2btcce4m: -0.3928em;
  --_2btcce4n: -0.4201em;
  --_2btcce4o: 28px;
  --_2btcce4p: 36px;
  --_2btcce4q: 19.9063px;
  --_2btcce4r: -0.2737em;
  --_2btcce4s: -0.3011em;
  --_2btcce4t: 21px;
  --_2btcce4u: 28px;
  --_2btcce4v: 14.9297px;
  --_2btcce4w: -0.2975em;
  --_2btcce4x: -0.3249em;
  --_2btcce4y: 21px;
  --_2btcce4z: 28px;
  --_2btcce50: 14.9297px;
  --_2btcce51: -0.2975em;
  --_2btcce52: -0.3249em;
  --_2btcce53: 18px;
  --_2btcce54: 28px;
  --_2btcce55: 12.7969px;
  --_2btcce56: -0.4086em;
  --_2btcce57: -0.436em;
  --_2btcce58: 18px;
  --_2btcce59: 28px;
  --_2btcce5a: 12.7969px;
  --_2btcce5b: -0.4086em;
  --_2btcce5c: -0.436em;
  --_2btcce5d: 400;
  --_2btcce5e: 600;
  --_2btcce5f: none;
  --_2btcce5g: 24px;
  --_2btcce5h: 20px;
  --_2btcce5i: transform 0.125s ease, opacity 0.125s ease;
  --_2btcce5j: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --_2btcce5k: scale(0.95);
  --_2btcce5l: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 2px 2px -2px rgba(28, 35, 48, 0.1), 0 4px 4px -4px rgba(28, 35, 48, 0.2);
  --_2btcce5m: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 8px 8px -4px rgba(28, 35, 48, 0.1), 0 12px 12px -8px rgba(28, 35, 48, 0.2);
  --_2btcce5n: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 12px 12px -4px rgba(28, 35, 48, 0.1),
    0 20px 20px -12px rgba(28, 35, 48, 0.2);
}
.hj75aa6 {
  background: var(--hj75aa0);
}
.hj75aa7 {
  background: var(--hj75aa1);
}
.hj75aa8 {
  background: var(--hj75aa2);
}
.hj75aa9 {
  background: var(--hj75aa3);
}
.hj75aaa {
  background: var(--hj75aa4);
}
.hj75aab {
  background: var(--hj75aa5);
}
html:not(.kztvv0z) .hj75aac {
  --hj75aa0: var(--_2btccew);
  --hj75aa1: var(--_2btccep);
  --hj75aa2: var(--_2btcceu);
  --hj75aa3: var(--_2btcceh);
  --hj75aa4: var(--_2btccej);
  --hj75aa5: var(--_2btccen);
}
html:not(.kztvv0z) .hj75aad {
  --hj75aa0: var(--_2btccex);
  --hj75aa1: var(--_2btcceq);
  --hj75aa2: var(--_2btccev);
  --hj75aa3: var(--_2btccei);
  --hj75aa4: var(--_2btccek);
  --hj75aa5: var(--_2btcceo);
}
html.kztvv0z .hj75aae {
  --hj75aa0: var(--_2btccew);
  --hj75aa1: var(--_2btccep);
  --hj75aa2: var(--_2btcceu);
  --hj75aa3: var(--_2btcceh);
  --hj75aa4: var(--_2btccej);
  --hj75aa5: var(--_2btccen);
}
html.kztvv0z .hj75aaf {
  --hj75aa0: var(--_2btccex);
  --hj75aa1: var(--_2btcceq);
  --hj75aa2: var(--_2btccev);
  --hj75aa3: var(--_2btccei);
  --hj75aa4: var(--_2btccek);
  --hj75aa5: var(--_2btcceo);
}
.hj75aag {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
.hj75aah {
  width: var(--_2btccee);
}
.hj75aai {
  width: var(--_2btccea);
}
._1rratpk0 {
  margin-bottom: -0.1em;
}
._1rratpk2 {
  text-overflow: ellipsis;
  white-space: nowrap;
}
._1rratpk0 ._1rratpk2 {
  padding-bottom: 0.1em;
}
@supports (display: -webkit-box) and (-webkit-line-clamp: 1) {
  ._1rratpk4 {
    display: -webkit-box;
    white-space: normal;
    -webkit-line-clamp: var(--_1rratpk3);
    -webkit-box-orient: vertical;
  }
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /**
 * @license React
 * react-dom.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-jsx-runtime.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * scheduler.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin start should start a development server 1`] = `
SCRIPTS: [
  "main.js",
]
CSS: [
  "main.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script
      defer
      src="scripts[0]"
    >
    </script>
    <link
      href="styles[0]"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>
POST HYDRATE DIFFS: 
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html.sprinkles_darkMode__kztvv0z,html.sprinkles_darkMode__kztvv0z body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="apacTheme_apac__1qi8hom0 typography_lightModeTone_light__1y7skkk18 typography_darkModeTone_dark__1y7skkk1b">
+        <div class="reset_base__njgpo30 sprinkles_paddingBottom_gutter_mobile__kztvv07i sprinkles_paddingTop_gutter_mobile__kztvv06e sprinkles_paddingLeft_gutter_mobile__kztvv09q sprinkles_paddingRight_gutter_mobile__kztvv08m sprinkles_position_relative_mobile__kztvv05e typography_lightModeTone_light__1y7skkk18 typography_darkModeTone_dark__1y7skkk1b sprinkles_background_surface_lightMode__kztvv032 sprinkles_background_surfaceDark_darkMode__kztvv035">
+          <span class="reset_base__njgpo30 sprinkles_display_block_mobile__kztvv04y typography_fontFamily__1y7skkk0 typography_fontWeight_regular__1y7skkk1 typography_tone_neutral__1y7skkk21 capsize_capsizeStyle__8on0wp4 typography_textSize_large__1y7skkkd">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;
